<resources>
    <string name="app_name">inQuiRy</string>
    <string name="theme_mode">light</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_profile">Profile</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="text_cancel">Cancel</string>
    <string name="profile_greeting">Hi, %1$s!</string>
    <string name="input_edit_username">Username</string>
    <string name="input_edit_email">Email</string>
    <string name="title_myqrs">My QRs</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="save_changes_button">Save Changes</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="onboarding_message">Welcome %s\nYou can change your user information in</string>
    <string name="title">inQuiRy</string>
    <string name="or">or</string>
    <string name="profile">Profile</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="privacy_message">Privacy\n\nYour scanned QR codes will not be stored. Only a representation (SHA256 hash) that cannot be used to recreate QR code data will be recorded.\n\nYour location will be requested in order to view your QR codes on a map. The location will only be saved if requested by you.\n\nImages uploaded through the app will be shared with others.</string>
    <string name="refresh">Refresh</string>
    <string name="view_nearby_codes">View Nearby Codes</string>
    <string name="existing_user">Log in as an existing user</string>
</resources>