<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/baseline_person_pin_circle_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_myqrs"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_myqrs" />
    <item
        android:id="@+id/navigation_scanner"
        android:icon="@drawable/ic_baseline_camera_alt_24"
        android:title="@string/title_scanner" />

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/ic_baseline_leaderboard_24"
        android:title="@string/title_leaderboard" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile" />

</menu>