<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_scanner">

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.cmput301w22t13.inquiry.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_myqrs"
        android:name="com.cmput301w22t13.inquiry.ui.myQRs.MyQRsFragment"
        android:label="@string/title_myqrs"
        tools:layout="@layout/fragment_myqrs" />
    <fragment
        android:id="@+id/navigation_scanner"
        android:name="com.cmput301w22t13.inquiry.ui.scanner.ScannerFragment"
        android:label="@string/title_scanner"
        tools:layout="@layout/scanner_fragment" />

    <fragment
        android:id="@+id/navigation_leaderboard"
        android:name="com.cmput301w22t13.inquiry.ui.leaderboard.LeaderboardFragment"
        android:label="@string/title_leaderboard"
        tools:layout="@layout/fragment_leaderboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.cmput301w22t13.inquiry.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>